# wccm

./: .gitignore  LICENSE  README.md  changelog.md  config.json  example.wccm  formatter.py  infoParse.py  parse.py  pref.pref  pyproject.toml  storage.py  wccm.py
src/: formatter.py  infoParse.py  parse.py  storage.py  wccm.py
src/wccm/: allophones.py  allophony.json  cmd.py  config.json  config.py  default.json  formatter.py  info.json  infoParse.py  parse.py  storage.py  wccm.py
