[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wccm"
version = "0.4.0"
description = "Compact command-line conlang manager"
authors = [{ name = "Wernasho" }]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
wccm = "wccm.wccm:main" 

[tool.setuptools.package-data]
wccm = ["*.json"]
